Fix language for italian part

--- a/TEXT_template/ClassicThesis_DEIB.tex
+++ b/TEXT_template/ClassicThesis_DEIB.tex
@@ -93,15 +93,15 @@
 	% Uncomment the following line to add the ''copertina'' to the pdf
 	% \include{FrontBackmatter/Copertina}
 	\include{FrontBackmatter/Frontespizio}
-	\include{FrontBackmatter/FrontespizioIT}
-	\include{FrontBackmatter/RetroFrontespizio} % a.k.a. the colophon
 	\cleardoublepage\include{FrontBackmatter/Dedication}
 	% \cleardoublepage\include{FrontBackmatter/Publication}
 	\cleardoublepage\include{FrontBackmatter/Acknowledgments}
 	\cleardoublepage\include{FrontBackmatter/AutoParts/Contents}
 	\cleardoublepage\include{FrontBackmatter/Abstract}
-	\cleardoublepage\include{FrontBackmatter/Estratto}
-	\cleardoublepage\include{FrontBackmatter/Preface}
+	\selectlanguage{italian}
+	\cleardoublepage\include{FrontBackmatter/Sommario}
+	\selectlanguage{american}
+	\cleardoublepage%\include{FrontBackmatter/Preface}
 
 	\pagestyle{scrheadings}	
 		
