--- a/TEXT_template/FrontBackmatter/Sommario.tex
+++ b/TEXT_template/FrontBackmatter/Sommario.tex
@@ -1,16 +1,16 @@
 %*****************************************************************
 % Breve riassunto in italiano della tesi da cui si capisca tutto
 % ****************************************************************
-\newcommand{\estrattoname}{Estratto}
-\addcontentsline{toc}{chapter}{\estrattoname}
+\newcommand{\estrattoname}{Sommario}
+\addcontentsline{toc}{chapter}{Sommario}
 
-\pdfbookmark[1]{Estratto}{Estratto}
+\pdfbookmark[1]{Sommario}{Sommario}
 \begingroup
 \let\clearpage\relax
 \let\cleardoublepage\relax
 \let\cleardoublepage\relax
 
-\chapter*{Estratto}
+\chapter*{Sommario}
 \enquote{\ldots il testo delle tesi redatte in lingua straniera dovrà essere introdotto da un
 ampio estratto in lingua italiana, che andrà collocato dopo l’abstract.}
 
