Fix alignement toc

--- a/text/classicthesis-config.tex
+++ b/text/classicthesis-config.tex
@@ -25,7 +25,8 @@
 				 	subfig,
 					beramono,
 					eulermath,
-					parts}{classicthesis}										
+					parts,
+					dottedtoc}{classicthesis}										
 
 % ****************************************************************
 % Triggers for this config
